--- a/css/_styles.css
+++ b/css/_styles.css
@@ -1,6 +1,7 @@
 
 .container {
     display: flex;
+    flex-direction: column;
     text-align: center;
 }
 .whitebg {
@@ -25,6 +26,8 @@
   left: 0;
   justify-content: space-between;
   height: 100px;
+  opacity: 0.8;
+  flex-direction: row;
 }
 .nav-links {
   padding-right: 120px;
@@ -39,4 +42,28 @@
     top: 0;
     height: 100px;
     width: auto;
+}
+
+.grid {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 10px;
+}
+.thumbnail {
+    display: block;
+    padding: 4px;
+    margin: 0px 10px 30px 10px;
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-transition: border .2s ease-in-out;
+    -o-transition: border .2s ease-in-out;
+    transition: border .2s ease-in-out;
+}
+.thumbnail:hover {
+  box-shadow: -0.06em 0 red, 0.06em 0 cyan;
+
 }
