--- a/css/_styles.css
+++ b/css/_styles.css
@@ -1,8 +1,10 @@
 
 .container {
     display: flex;
-    flex-direction: column;
     text-align: center;
+}
+.column {
+  flex-direction: column;
 }
 .whitebg {
     background-color: #fff;
@@ -51,8 +53,7 @@
 .thumbnail {
     display: block;
     padding: 4px;
-    margin: 0px 10px 30px 10px;
-    margin-bottom: 20px;
+    margin: 10px 10px 10px 10px;
     line-height: 1.42857143;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -63,5 +64,15 @@
 }
 .thumbnail:hover {
   box-shadow: -0.06em 0 red, 0.06em 0 cyan;
+}
 
+.about {
+  width: 970px;
+  justify-content: space-around;
+  padding: 25px;
+}
+.about p {
+  max-width: 50%;
+  text-align: left;
+  margin: 15px;
 }
